--- a/products/FoxProJudge.html
+++ b/products/FoxProJudge.html
@@ -13,22 +13,25 @@
             <header>
                 <div class="logo"></div>
             </header>
-            <hr>
             <nav class="head-menu">
                 <a href="../index.html">Главная</a>
                 <a href="../catalog.html">Каталог</a>
+                <a href="#">Распродажа</a>
+                <a href="#">Гарантия</a>
+                <a href="#">Доставка</a>
+                <a href="#">Оплата</a>
+                <a href="#">Блог</a>
                 <a href="../contact.html">Контакты</a>
             </nav>
-            <hr>
             <div class="item-content">
                 <h2>Самокат трюковый FOX Pro Judge</h2>
                 <a href="../photo/FoxProJudge.jpg" target="_blank">
                     <img src="../photo/FoxProJudge.jpg">
                 </a>
                 <h4>Описание товара</h4>
-                <p>FOX Pro Judge&nbsp;&mdash; самокат для экстремалов-профи от&nbsp;8&nbsp;лет и&nbsp;старше. Усиленная конструкция руля и&nbsp;деки, надежная система компрессии, прочная моноблочная вилка&nbsp;&mdash; вот главные преимущества Pro Judge, позволяющие райдеру практиковать агрессивный стиль катания.</p>
+                <p class="short-desc">FOX Pro Judge&nbsp;&mdash; самокат для экстремалов-профи от&nbsp;8&nbsp;лет и&nbsp;старше. Усиленная конструкция руля и&nbsp;деки, надежная система компрессии, прочная моноблочная вилка&nbsp;&mdash; вот главные преимущества Pro Judge, позволяющие райдеру практиковать агрессивный стиль катания.</p>
                 <h4>Характеристики товара</h4>
-                <ul>
+                <ul class="characs">
                     <li>вес&nbsp;&mdash; 3,7&nbsp;кг, грузоподъемность&nbsp;&mdash; 100&nbsp;кг;</li>
                     <li>Y-руль с&nbsp;подпорками из&nbsp;труб большого диаметра (Cr-Mo 4130);</li>
                     <li>высота руля&nbsp;&mdash; 83&nbsp;см, закреплен хомутом с&nbsp;4-ми болтами;</li>
@@ -36,7 +39,7 @@
                     <li>интегрированная рулевая колонка.</li>
                 </ul>
                 <h4>Подробное описание товара</h4>
-                <p>От&nbsp;более доступной трюковой модели FOX Pro Shark самокат Pro Judge отличается диаметром колес (11&nbsp;см против 10&nbsp;см) и&nbsp;формой руля (Y-форма против Bat-wing). Отметим, что Y-руль немного легче, а&nbsp;Bat-wing снижает вероятность травмы кисти при выполнении барспинов.</p>
+                <p class="desc">От&nbsp;более доступной трюковой модели FOX Pro Shark самокат Pro Judge отличается диаметром колес (11&nbsp;см против 10&nbsp;см) и&nbsp;формой руля (Y-форма против Bat-wing). Отметим, что Y-руль немного легче, а&nbsp;Bat-wing снижает вероятность травмы кисти при выполнении барспинов.</p>
             </div>
 
         </div>
