--- a/catalog.html
+++ b/catalog.html
@@ -15,13 +15,16 @@
                 <div class="logo"></div>
 
             </header>
-            <hr>
             <nav class="head-menu">
                 <a href="index.html">Главная</a>
-                <a href="">Каталог</a>
+                <a href="#" class="active">Каталог</a>
+                <a href="#">Распродажа</a>
+                <a href="#">Гарантия</a>
+                <a href="#">Доставка</a>
+                <a href="#">Оплата</a>
+                <a href="#">Блог</a>
                 <a href="contact.html">Контакты</a>
             </nav>
-            <hr>
             <h2>Каталог</h2>
             <div class="catalog">
                 <div class="item">
