--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,22 @@
                 <div class="logo"></div>
 
             </header>
-            <hr>
             <nav class="head-menu">
                 <a href="index.html">Главная</a>
                 <a href="catalog.html">Каталог</a>
-                <a href="">Контакты</a>
+                <a href="#">Распродажа</a>
+                <a href="#">Гарантия</a>
+                <a href="#">Доставка</a>
+                <a href="#">Оплата</a>
+                <a href="#">Блог</a>
+                <a href="#" class="active">Контакты</a>
             </nav>
-            <hr>
             <h2>Напишите нам</h2>
             <form action="">
                 <label for="">Ваше имя <input type="text" placeholder="Иван"></label>
                 <label>E-mail <input type="email"></label>
                 <label for="">Тема письма <input type="text"></label>
-                <textarea name="" id="" cols="40" rows="10" placeholder="Ваше сообщение"></textarea>     
+                <textarea name="" id="" cols="55" rows="10" placeholder="Ваше сообщение"></textarea>     
                 <button>Отправить</button>
                 
             </form>
