--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
                 <div class="logo"></div>
 
             </header>
-            <hr>
-            <nav class="head-menu">
-                <a href="">Главная</a>
+            <nav>
+                <a href="" class="active">Главная</a>
                 <a href="catalog.html">Каталог</a>
+                <a href="#">Распродажа</a>
+                <a href="#">Гарантия</a>
+                <a href="#">Доставка</a>
+                <a href="#">Оплата</a>
+                <a href="#">Блог</a>
                 <a href="contact.html">Контакты</a>
+
             </nav>
-            <hr>
+            <h2>Интернет-магазин Фабрика самокатов</h2>
+
             <div class="content">
-                <h2>Интернет-магазин Фабрика самокатов</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, natus, eligendi! Cum, ea incidunt. Molestias nam temporibus sunt deserunt repellat mollitia ex similique doloribus eos distinctio iure impedit minus, natus!
                 </p>
