--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <div class="container">
         <div class="site-content">
             <header>
-                <div class="logo"></div>
+                <div class="logo">
+                    <a href="#"><img src="img/logo.png" alt="logo"></a>
+                </div>
+                <nav>
+                    <a href="" class="active">Главная</a>
+                    <a href="catalog.html">Каталог</a>
+                    <a href="#">Распродажа</a>
+                    <a href="#">Гарантия</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Оплата</a>
+                    <a href="#">Блог</a>
+                    <a href="contact.html">Контакты</a>
 
+                </nav>
             </header>
-            <nav>
-                <a href="" class="active">Главная</a>
-                <a href="catalog.html">Каталог</a>
-                <a href="#">Распродажа</a>
-                <a href="#">Гарантия</a>
-                <a href="#">Доставка</a>
-                <a href="#">Оплата</a>
-                <a href="#">Блог</a>
-                <a href="contact.html">Контакты</a>
 
-            </nav>
             <h2>Интернет-магазин Фабрика самокатов</h2>
 
             <div class="content">
@@ -35,7 +37,23 @@
             </div>
         </div>
         <footer>
-            <hr>
+            <div class="footer-menu">
+                <div class="">
+                    <a href="">Доставка</a>
+                    <a href="">Оплата</a>
+                    <a href="">Гарантия</a>
+                </div>
+                <div class="">
+                    <a href="">Каталог</a>
+                    <a href="">Распродажа</a>
+                </div>
+                <div class="">
+                    <a href="">О нас</a>
+                    <a href="">Блог</a>
+                    <a href="">Оптовикам</a>
+                    <a href="">Контакты</a>
+                </div>
+            </div>
 
             <p>&copy;&nbsp;Все права защищены.</p>
 
