--- a/products/FoxProJudge.html
+++ b/products/FoxProJudge.html
@@ -11,18 +11,21 @@
     <div class="container">
         <div class="site-content">
             <header>
-                <div class="logo"></div>
+                <div class="logo">
+                    <a href="../index.html"><img src="../img/logo.png" alt="logo"></a>
+                </div>
+                <nav class="head-menu">
+                    <a href="../index.html">Главная</a>
+                    <a href="../catalog.html">Каталог</a>
+                    <a href="#">Распродажа</a>
+                    <a href="#">Гарантия</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Оплата</a>
+                    <a href="#">Блог</a>
+                    <a href="../contact.html">Контакты</a>
+                </nav>
             </header>
-            <nav class="head-menu">
-                <a href="../index.html">Главная</a>
-                <a href="../catalog.html">Каталог</a>
-                <a href="#">Распродажа</a>
-                <a href="#">Гарантия</a>
-                <a href="#">Доставка</a>
-                <a href="#">Оплата</a>
-                <a href="#">Блог</a>
-                <a href="../contact.html">Контакты</a>
-            </nav>
+
             <div class="item-content">
                 <h2>Самокат трюковый FOX Pro Judge</h2>
                 <a href="../photo/FoxProJudge.jpg" target="_blank">
@@ -38,14 +41,58 @@
                     <li>ширина руля&nbsp;&mdash; 50&nbsp;см;</li>
                     <li>интегрированная рулевая колонка.</li>
                 </ul>
+                <table class="tech">
+                    <caption>Технические характеристики</caption>
+                    <tr>
+                        <td>Lorem ipsum dolor.</td>
+                        <td colspan="3">Lorem ipsum dolor sit.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum.</td>
+                        <td>Lorem ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit.</td>
+                        <td>Lorem ipsum dolor sit amet.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="3">Lorem ipsum dolor sit amet, consectetur adipisicing.</td>
+                        <td>Lorem ipsum.</td>
+                        <td colspan="2">Lorem ipsum dolor sit.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit.</td>
+                        <td>Lorem ipsum.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor sit amet.</td>
+                        <td>Lorem ipsum.</td>
+                        <td>Lorem ipsum dolor sit amet.</td>
+                    </tr>
+                </table>
+
                 <h4>Подробное описание товара</h4>
                 <p class="desc">От&nbsp;более доступной трюковой модели FOX Pro Shark самокат Pro Judge отличается диаметром колес (11&nbsp;см против 10&nbsp;см) и&nbsp;формой руля (Y-форма против Bat-wing). Отметим, что Y-руль немного легче, а&nbsp;Bat-wing снижает вероятность травмы кисти при выполнении барспинов.</p>
             </div>
 
         </div>
         <footer>
-            <hr>
-
+            <div class="footer-menu">
+                <div class="">
+                    <a href="">Доставка</a>
+                    <a href="">Оплата</a>
+                    <a href="">Гарантия</a>
+                </div>
+                <div class="">
+                    <a href="">Каталог</a>
+                    <a href="">Распродажа</a>
+                </div>
+                <div class="">
+                    <a href="">О нас</a>
+                    <a href="">Блог</a>
+                    <a href="">Оптовикам</a>
+                    <a href="">Контакты</a>
+                </div>
+            </div>
             <p>&copy;&nbsp;Все права защищены.</p>
 
         </footer>
