--- a/catalog.html
+++ b/catalog.html
@@ -12,19 +12,21 @@
     <div class="container">
         <div class="site-content">
             <header>
-                <div class="logo"></div>
-
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+                </div>
+                <nav class="head-menu">
+                    <a href="index.html">Главная</a>
+                    <a href="#" class="active">Каталог</a>
+                    <a href="#">Распродажа</a>
+                    <a href="#">Гарантия</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Оплата</a>
+                    <a href="#">Блог</a>
+                    <a href="contact.html">Контакты</a>
+                </nav>
             </header>
-            <nav class="head-menu">
-                <a href="index.html">Главная</a>
-                <a href="#" class="active">Каталог</a>
-                <a href="#">Распродажа</a>
-                <a href="#">Гарантия</a>
-                <a href="#">Доставка</a>
-                <a href="#">Оплата</a>
-                <a href="#">Блог</a>
-                <a href="contact.html">Контакты</a>
-            </nav>
+
             <h2>Каталог</h2>
             <div class="catalog">
                 <div class="item">
@@ -84,7 +86,23 @@
             </div>
         </div>
         <footer>
-            <hr>
+           <div class="footer-menu">
+                <div class="">
+                    <a href="">Доставка</a>
+                    <a href="">Оплата</a>
+                    <a href="">Гарантия</a>
+                </div>
+                <div class="">
+                    <a href="">Каталог</a>
+                    <a href="">Распродажа</a>
+                </div>
+                <div class="">
+                    <a href="">О нас</a>
+                    <a href="">Блог</a>
+                    <a href="">Оптовикам</a>
+                    <a href="">Контакты</a>
+                </div>
+            </div>
             <p>&copy;&nbsp;Все права защищены.</p>
 
         </footer>
