--- a/contact.html
+++ b/contact.html
@@ -13,40 +13,58 @@
         <div class="site-content">
 
             <header>
-                <div class="logo"></div>
-
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+                </div>
+                <nav class="head-menu">
+                    <a href="index.html">Главная</a>
+                    <a href="catalog.html">Каталог</a>
+                    <a href="#">Распродажа</a>
+                    <a href="#">Гарантия</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Оплата</a>
+                    <a href="#">Блог</a>
+                    <a href="#" class="active">Контакты</a>
+                </nav>
             </header>
-            <nav class="head-menu">
-                <a href="index.html">Главная</a>
-                <a href="catalog.html">Каталог</a>
-                <a href="#">Распродажа</a>
-                <a href="#">Гарантия</a>
-                <a href="#">Доставка</a>
-                <a href="#">Оплата</a>
-                <a href="#">Блог</a>
-                <a href="#" class="active">Контакты</a>
-            </nav>
+
             <h2>Напишите нам</h2>
             <form action="">
                 <label for="">Ваше имя <input type="text" placeholder="Иван"></label>
                 <label>E-mail <input type="email"></label>
                 <label for="">Тема письма <input type="text"></label>
-                <textarea name="" id="" cols="55" rows="10" placeholder="Ваше сообщение"></textarea>     
+                <textarea name="" id="" cols="55" rows="10" placeholder="Ваше сообщение"></textarea>
                 <button>Отправить</button>
-                
+
             </form>
             <h2>Адрес</h2>
             <p>Санкт-Петербург, ул. Восстания д.38</p>
             <p>Тел: 123456789</p>
             <h2>Как добраться</h2>
-            
+
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A92f31dc173aee1718b77ee182b166f0334276887ecf720cbabc3ba4423573c88&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
 
 
 
         <footer>
-            <hr>
+           <div class="footer-menu">
+                <div class="">
+                    <a href="">Доставка</a>
+                    <a href="">Оплата</a>
+                    <a href="">Гарантия</a>
+                </div>
+                <div class="">
+                    <a href="">Каталог</a>
+                    <a href="">Распродажа</a>
+                </div>
+                <div class="">
+                    <a href="">О нас</a>
+                    <a href="">Блог</a>
+                    <a href="">Оптовикам</a>
+                    <a href="">Контакты</a>
+                </div>
+            </div>
             <p>&copy;&nbsp;Все права защищены.</p>
 
         </footer>
