--- a/catalog.html
+++ b/catalog.html
@@ -103,7 +103,9 @@
                     <a href="">Контакты</a>
                 </div>
             </div>
-            <p>&copy;&nbsp;Все права защищены.</p>
+            <div class="footer-bottom">
+                <p>&copy;&nbsp;Все права защищены.</p>
+            </div>
 
         </footer>
     </div>
