--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,8 @@
             <p>Тел: 123456789</p>
             <h2>Как добраться</h2>
 
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A92f31dc173aee1718b77ee182b166f0334276887ecf720cbabc3ba4423573c88&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+           
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A92f31dc173aee1718b77ee182b166f0334276887ecf720cbabc3ba4423573c88&amp;width=100%25&amp;height=374&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
 
 
@@ -65,7 +66,9 @@
                     <a href="">Контакты</a>
                 </div>
             </div>
-            <p>&copy;&nbsp;Все права защищены.</p>
+            <div class="footer-bottom">
+                <p>&copy;&nbsp;Все права защищены.</p>
+            </div>
 
         </footer>
     </div>
