--- a/products/FoxProJudge.html
+++ b/products/FoxProJudge.html
@@ -28,11 +28,23 @@
 
             <div class="item-content">
                 <h2>Самокат трюковый FOX Pro Judge</h2>
-                <a href="../photo/FoxProJudge.jpg" target="_blank">
-                    <img src="../photo/FoxProJudge.jpg">
-                </a>
-                <h4>Описание товара</h4>
-                <p class="short-desc">FOX Pro Judge&nbsp;&mdash; самокат для экстремалов-профи от&nbsp;8&nbsp;лет и&nbsp;старше. Усиленная конструкция руля и&nbsp;деки, надежная система компрессии, прочная моноблочная вилка&nbsp;&mdash; вот главные преимущества Pro Judge, позволяющие райдеру практиковать агрессивный стиль катания.</p>
+                <div class="photo-desc">
+                    <a href="../photo/FoxProJudge.jpg" target="_blank">
+                        <img src="../photo/FoxProJudge.jpg" alt="photo">
+                    </a>
+                    <div class="short-desc">
+                        <h4>Описание товара</h4>
+                        <p>FOX Pro Judge&nbsp;&mdash; самокат для экстремалов-профи от&nbsp;8&nbsp;лет и&nbsp;старше. Усиленная конструкция руля и&nbsp;деки, надежная система компрессии, прочная моноблочная вилка&nbsp;&mdash; вот главные преимущества Pro Judge, позволяющие райдеру практиковать агрессивный стиль катания.</p>
+                        <div class="buttons">
+                            <a class="buy-fast" href="">Купить в 1 клик</a>
+                            <a class="to-cart" href="">Добавить в корзину</a>
+
+                        </div>
+                    </div>
+
+
+                </div>
+
                 <h4>Характеристики товара</h4>
                 <ul class="characs">
                     <li>вес&nbsp;&mdash; 3,7&nbsp;кг, грузоподъемность&nbsp;&mdash; 100&nbsp;кг;</li>
@@ -71,7 +83,7 @@
                 </table>
 
                 <h4>Подробное описание товара</h4>
-                <p class="desc">От&nbsp;более доступной трюковой модели FOX Pro Shark самокат Pro Judge отличается диаметром колес (11&nbsp;см против 10&nbsp;см) и&nbsp;формой руля (Y-форма против Bat-wing). Отметим, что Y-руль немного легче, а&nbsp;Bat-wing снижает вероятность травмы кисти при выполнении барспинов.</p>
+                <p>От&nbsp;более доступной трюковой модели FOX Pro Shark самокат Pro Judge отличается диаметром колес (11&nbsp;см против 10&nbsp;см) и&nbsp;формой руля (Y-форма против Bat-wing). Отметим, что Y-руль немного легче, а&nbsp;Bat-wing снижает вероятность травмы кисти при выполнении барспинов.</p>
             </div>
 
         </div>
@@ -93,7 +105,9 @@
                     <a href="">Контакты</a>
                 </div>
             </div>
-            <p>&copy;&nbsp;Все права защищены.</p>
+            <div class="footer-bottom">
+                <p>&copy;&nbsp;Все права защищены.</p>
+            </div>
 
         </footer>
     </div>
